syntax = "proto3";

package admin;
option go_package = "openeuler.io/mesh/api/admin;admin";

import "api/listener/listener.proto";
import "api/route/route.proto";
import "api/cluster/cluster.proto";

message ConfigDump {
  repeated listener.Listener listener_configs = 2;
  repeated route.RouteConfiguration route_configs = 3;
  repeated cluster.Cluster cluster_configs = 4;
}
